openldap/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldapadmin
  namespace: openldap
spec:
  selector:
    app: openldapadmin
  ports:
    - protocol: TCP
      port: 80
