openldap/openldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
  namespace: openldap
spec:
  ports:
    - port: 389
  selector:
    app: openldap
